옮기고 메인 손봄

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,12 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
+<!--    스플래시 색 -->
     <color name="splashBackgroundColor">#000000</color>
     <color name="splashTextColor">#f7b500</color>
 
+<!--    메인액티비 색 -->
     <color name="moneyTextColor">#848484</color>
+
+    <color name="mainWhiteColor">#ffffff</color>
 </resources>
