--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,186 +1,209 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mainWhiteColor"
-    android:orientation="vertical"
-    tools:context=".src.main.MainActivity">
+    android:background="@color/mainWhiteColor">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="15dp"
-        android:background="@drawable/border_round_yellow"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/menuHamburger"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="34dp"
+            app:srcCompat="@drawable/ic_menu_hamburger" />
 
-            <RadioButton
-                android:id="@+id/noInsuRadio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="48dp"
-                android:buttonTint="@color/colorPrimary" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="37dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/border_round_yellow"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RadioButton
+                    android:id="@+id/noInsuRadio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="48dp"
+                    android:buttonTint="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/noInsuText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_toRightOf="@id/noInsuRadio"
+                    android:text="보험 없이 이용하기"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/border_round_yellow"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RadioButton
+                    android:id="@+id/basicInsuRadio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginTop="15dp"
+                    android:buttonTint="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/basicInsuText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_toRightOf="@id/basicInsuRadio"
+                    android:text="BASIC 보험 이용하기"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/basicInsuText2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/basicInsuText"
+                    android:layout_alignLeft="@id/basicInsuText"
+                    android:layout_marginTop="6dp"
+                    android:layout_weight="1"
+                    android:text="손해 보험"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/basicInsuTextMoney"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/basicInsuText"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="14dp"
+                    android:text="2500 원"
+                    android:textColor="@color/moneyTextColor"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/border_round_yellow"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RadioButton
+                    android:id="@+id/premiumInsuRadio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginTop="15dp"
+                    android:buttonTint="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/premiumInsuText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_toRightOf="@id/premiumInsuRadio"
+                    android:layout_weight="1"
+                    android:text="PREMIUM 보험 이용하기"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/premiumInsuText2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/premiumInsuText"
+                    android:layout_alignLeft="@id/premiumInsuText"
+                    android:layout_marginTop="6dp"
+                    android:layout_weight="1"
+                    android:text="손해 보험 / 파손 보험"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/premiumInsuTextMoney"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/premiumInsuText"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="14dp"
+                    android:layout_weight="1"
+                    android:text="5000 원"
+                    android:textColor="@color/moneyTextColor"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/noInsuText"
-                android:layout_width="wrap_content"
+                android:id="@+id/btnGoToRide"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="17dp"
-                android:layout_toRightOf="@id/noInsuRadio"
-                android:text="보험 없이 이용하기"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
+                android:layout_marginLeft="57dp"
+                android:layout_marginRight="57dp"
+                android:layout_marginBottom="38dp"
+                android:background="@drawable/border_round_back_yellow"
+                android:gravity="center"
+                android:paddingTop="11dp"
+                android:paddingBottom="11dp"
+                android:text="라이드하기"
+                android:textColor="@color/mainWhiteColor"
+                android:textSize="25sp"
                 android:textStyle="bold" />
-        </RelativeLayout>
-
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="15dp"
-        android:background="@drawable/border_round_yellow"
-        android:orientation="vertical">
+    <include layout="@layout/activity_drawer" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <RadioButton
-                android:id="@+id/basicInsuRadio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="15dp"
-                android:buttonTint="@color/colorPrimary" />
-
-            <TextView
-                android:id="@+id/basicInsuText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="17dp"
-                android:layout_toRightOf="@id/basicInsuRadio"
-                android:text="BASIC 보험 이용하기"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/basicInsuText2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/basicInsuText"
-                android:layout_alignLeft="@id/basicInsuText"
-                android:layout_marginTop="6dp"
-                android:layout_weight="1"
-                android:text="손해 보험"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/basicInsuTextMoney"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/basicInsuText"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="14dp"
-                android:text="2500 원"
-                android:textColor="@color/moneyTextColor"
-                android:textStyle="bold" />
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/border_round_yellow"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RadioButton
-                android:id="@+id/premiumInsuRadio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="15dp"
-                android:buttonTint="@color/colorPrimary" />
-
-            <TextView
-                android:id="@+id/premiumInsuText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="17dp"
-                android:layout_toRightOf="@id/premiumInsuRadio"
-                android:layout_weight="1"
-                android:text="PREMIUM 보험 이용하기"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/premiumInsuText2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/premiumInsuText"
-                android:layout_alignLeft="@id/premiumInsuText"
-                android:layout_marginTop="6dp"
-                android:layout_weight="1"
-                android:text="손해 보험 / 파손 보험"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/premiumInsuTextMoney"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/premiumInsuText"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="14dp"
-                android:layout_weight="1"
-                android:text="5000 원"
-                android:textColor="@color/moneyTextColor"
-                android:textStyle="bold" />
-        </RelativeLayout>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/btnGoToRide"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="57dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginRight="57dp"
-        android:background="@drawable/border_round_back_yellow"
-        android:gravity="center"
-        android:paddingTop="11dp"
-        android:paddingBottom="11dp"
-        android:text="라이드하기"
-        android:textColor="@color/mainWhiteColor"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
