--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,8 @@
                     android:layout_marginLeft="18dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="48dp"
-                    android:buttonTint="@color/colorPrimary" />
+                    android:buttonTint="@color/colorPrimary"
+                    android:onClick="onClickRadioBtn" />
 
                 <TextView
                     android:id="@+id/noInsuText"
@@ -76,7 +77,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="18dp"
                     android:layout_marginTop="15dp"
-                    android:buttonTint="@color/colorPrimary" />
+                    android:buttonTint="@color/colorPrimary"
+                    android:onClick="onClickRadioBtn" />
 
                 <TextView
                     android:id="@+id/basicInsuText"
@@ -136,7 +138,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="18dp"
                     android:layout_marginTop="15dp"
-                    android:buttonTint="@color/colorPrimary" />
+                    android:buttonTint="@color/colorPrimary"
+                    android:onClick="onClickRadioBtn" />
 
                 <TextView
                     android:id="@+id/premiumInsuText"
