--- a/app/src/main/res/drawable/bg_rec_trans_yellow.xml
+++ b/app/src/main/res/drawable/bg_rec_trans_yellow.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="#00f8e000" />
+    <solid android:color="#ffffff" />
     <corners
         android:bottomLeftRadius="2dp"
         android:bottomRightRadius="2dp"
