티맵추가 구글맵 삭제 티맵 그거 자르 추가하는거 알져 네 그거 하세여

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="moneyTextColor">#848484</color>
 
     <color name="mainWhiteColor">#ffffff</color>
+<!--   티맵 폴리건 색 -->
+    <color name="mapTransYellow">#80f7b500</color>
 </resources>
