--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
             android:orientation="vertical">
 
             <RelativeLayout
+                android:id="@+id/noInsuLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -68,6 +69,7 @@
             android:orientation="vertical">
 
             <RelativeLayout
+                android:id="@+id/basicInsuLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -129,6 +131,7 @@
             android:orientation="vertical">
 
             <RelativeLayout
+                android:id="@+id/premiumInsuLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
