--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,4 +34,8 @@
     <color name="signUpBottomBorder">#efefef</color>
 <!--    로그인 글씨 색 -->
     <color name="logInTextGrey">#b8b8b8</color>
+<!--    영수증 상단 레이아웃 색 -->
+    <color name="billTopLayout">#d8d8d8</color>
+    <color name="billBottomGrey">#d2d2d2</color>
+    <color name="billTextGrey">#C2C2C2</color>
 </resources>
