--- a/app/src/main/res/layout/activity_map2.xml
+++ b/app/src/main/res/layout/activity_map2.xml
@@ -25,6 +25,7 @@
         android:gravity="center"
         android:text="REC"
         android:textColor="@color/colorWhite"
+        android:onClick="customOnClick"
         android:textSize="15sp"
         android:textStyle="bold" />
 
@@ -36,5 +37,7 @@
         android:layout_marginLeft="21dp"
         android:layout_marginTop="56dp"
         app:srcCompat="@drawable/ic_ment_klay" />
+
+
 
 </FrameLayout>
