--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,4 +34,6 @@
     <color name="signUpBottomBorder">#efefef</color>
 <!--    로그인 글씨 색 -->
     <color name="logInTextGrey">#b8b8b8</color>
+    <color name="semi_transparent">#66000000</color>
+
 </resources>
