--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -74,7 +74,7 @@
             android:paddingBottom="10dp">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/klayNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
